phase1_v2/TigerParser.java
// $ANTLR 3.5.1 E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g 2015-02-23 21:08:43

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class TigerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARRAY", "ASSIGN", "BEGIN", 
		"BREAK", "COLON", "COMMA", "COMMENT", "DIV", "DO", "Digit", "Digits", 
		"ELSE", "END", "ENDDO", "ENDIF", "EQ", "FIXEDPT", "FOR", "FUNCTION", "FixedPointLiteral", 
		"GREATER", "GREATEREQ", "IF", "INT", "Identifier", "IntegerLiteral", "LBRACK", 
		"LESSER", "LESSEREQ", "LINE_COMMENT", "LPAREN", "Letter", "MAIN", "MINUS", 
		"MULT", "NEQ", "NaturalNumber", "OF", "OR", "PLUS", "RBRACK", "RETURN", 
		"RPAREN", "SEMI", "THEN", "TO", "TYPE", "VAR", "VOID", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ARRAY=5;
	public static final int ASSIGN=6;
	public static final int BEGIN=7;
	public static final int BREAK=8;
	public static final int COLON=9;
	public static final int COMMA=10;
	public static final int COMMENT=11;
	public static final int DIV=12;
	public static final int DO=13;
	public static final int Digit=14;
	public static final int Digits=15;
	public static final int ELSE=16;
	public static final int END=17;
	public static final int ENDDO=18;
	public static final int ENDIF=19;
	public static final int EQ=20;
	public static final int FIXEDPT=21;
	public static final int FOR=22;
	public static final int FUNCTION=23;
	public static final int FixedPointLiteral=24;
	public static final int GREATER=25;
	public static final int GREATEREQ=26;
	public static final int IF=27;
	public static final int INT=28;
	public static final int Identifier=29;
	public static final int IntegerLiteral=30;
	public static final int LBRACK=31;
	public static final int LESSER=32;
	public static final int LESSEREQ=33;
	public static final int LINE_COMMENT=34;
	public static final int LPAREN=35;
	public static final int Letter=36;
	public static final int MAIN=37;
	public static final int MINUS=38;
	public static final int MULT=39;
	public static final int NEQ=40;
	public static final int NaturalNumber=41;
	public static final int OF=42;
	public static final int OR=43;
	public static final int PLUS=44;
	public static final int RBRACK=45;
	public static final int RETURN=46;
	public static final int RPAREN=47;
	public static final int SEMI=48;
	public static final int THEN=49;
	public static final int TO=50;
	public static final int TYPE=51;
	public static final int VAR=52;
	public static final int VOID=53;
	public static final int WHILE=54;
	public static final int WS=55;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TigerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TigerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return TigerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g"; }


	public void printTokenType() {
			int size_token = input.size();
			for (int i = 0; i < size_token; i++) {
				int temp = input.get(i).getType();
				if (temp < 0) {
					temp = 1;
				}
				if (temp != 55) {
					String nameOfToken = tokenNames[temp];
					System.out.print(nameOfToken + " ");
				}
			}
		}
			    public void displayRecognitionError(String[] tokenNames,
			                                        RecognitionException e) {
			        String hdr = getErrorHeader(e);
			        String[] input = e.input.toString().split("\n");
			        String[] errmsg = hdr.split(":");
			        String msg = getErrorMessage(e, tokenNames);
			        String temp = "";
			        String temp2 = "";
			        int i = errmsg[0].length() - 1;
			        int j = 0;
			        while ((errmsg[0].substring(i, i + 1).equals("0"))
			        		|| (errmsg[0].substring(i, i + 1).equals("1"))
			        		|| (errmsg[0].substring(i, i + 1).equals("2"))
			        		|| (errmsg[0].substring(i, i + 1).equals("3"))
			        		|| (errmsg[0].substring(i, i + 1).equals("4"))
			        		|| (errmsg[0].substring(i, i + 1).equals("5"))
			        		|| (errmsg[0].substring(i, i + 1).equals("6"))
			        		|| (errmsg[0].substring(i, i + 1).equals("7"))
			        		|| (errmsg[0].substring(i, i + 1).equals("8"))
			        		|| (errmsg[0].substring(i, i + 1).equals("9"))) {
			        	temp = errmsg[0].substring(i, i + 1) + temp;
			        	i--;
			        }
			        while (j < errmsg[1].length() && (errmsg[1].substring(j, j + 1).equals("0")
			        				||errmsg[1].substring(j, j + 1).equals("0")
			        				||errmsg[1].substring(j, j + 1).equals("1")
			        				||errmsg[1].substring(j, j + 1).equals("2")
			        				||errmsg[1].substring(j, j + 1).equals("3")
									||errmsg[1].substring(j, j + 1).equals("4")
									||errmsg[1].substring(j, j + 1).equals("5")
									||errmsg[1].substring(j, j + 1).equals("6")
									||errmsg[1].substring(j, j + 1).equals("7")
									||errmsg[1].substring(j, j + 1).equals("8")
									||errmsg[1].substring(j, j + 1).equals("9"))) {
			        	temp2 = temp2 + errmsg[1].substring(j, j + 1);
			        	j++;
			        }
			        int linenum = Integer.parseInt(temp);
			        int num = Integer.parseInt(temp2);
			        String line;
			        String finalmessage;
			        if (num == 0) {
			        	line = input[linenum - 2];
			        	finalmessage = line;
			        } else {
			            line = input[linenum - 1];
			            finalmessage = line.substring(0, num + 1);
			        }
			        
			        System.out.println(hdr + " " + msg + ". prefix of error : " + finalmessage);
			    }



	// $ANTLR start "program"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:75:1: program : type_declaration_list funct_declaration_list main_function ;
	public final void program() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:76:5: ( type_declaration_list funct_declaration_list main_function )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:76:7: type_declaration_list funct_declaration_list main_function
			{
			pushFollow(FOLLOW_type_declaration_list_in_program47);
			type_declaration_list();
			state._fsp--;

			pushFollow(FOLLOW_funct_declaration_list_in_program49);
			funct_declaration_list();
			state._fsp--;

			pushFollow(FOLLOW_main_function_in_program51);
			main_function();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "funct_declaration_list"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:167:1: funct_declaration_list : ( type_id funct_declaration_tail funct_declaration_list | VOID ( funct_declaration_tail funct_declaration_list )? );
	public final void funct_declaration_list() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:168:5: ( type_id funct_declaration_tail funct_declaration_list | VOID ( funct_declaration_tail funct_declaration_list )? )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==FIXEDPT||(LA2_0 >= INT && LA2_0 <= Identifier)) ) {
				alt2=1;
			}
			else if ( (LA2_0==VOID) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:168:7: type_id funct_declaration_tail funct_declaration_list
					{
					pushFollow(FOLLOW_type_id_in_funct_declaration_list1040);
					type_id();
					state._fsp--;

					pushFollow(FOLLOW_funct_declaration_tail_in_funct_declaration_list1042);
					funct_declaration_tail();
					state._fsp--;

					pushFollow(FOLLOW_funct_declaration_list_in_funct_declaration_list1044);
					funct_declaration_list();
					state._fsp--;

					}
					break;
				case 2 :
					// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:169:7: VOID ( funct_declaration_tail funct_declaration_list )?
					{
					match(input,VOID,FOLLOW_VOID_in_funct_declaration_list1052); 
					// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:169:12: ( funct_declaration_tail funct_declaration_list )?
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==FUNCTION) ) {
						alt1=1;
					}
					switch (alt1) {
						case 1 :
							// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:169:13: funct_declaration_tail funct_declaration_list
							{
							pushFollow(FOLLOW_funct_declaration_tail_in_funct_declaration_list1055);
							funct_declaration_tail();
							state._fsp--;

							pushFollow(FOLLOW_funct_declaration_list_in_funct_declaration_list1057);
							funct_declaration_list();
							state._fsp--;

							}
							break;

					}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "funct_declaration_list"



	// $ANTLR start "funct_declaration_tail"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:172:1: funct_declaration_tail : FUNCTION Identifier LPAREN param_list RPAREN BEGIN block_list END SEMI ;
	public final void funct_declaration_tail() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:173:5: ( FUNCTION Identifier LPAREN param_list RPAREN BEGIN block_list END SEMI )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:173:7: FUNCTION Identifier LPAREN param_list RPAREN BEGIN block_list END SEMI
			{
			match(input,FUNCTION,FOLLOW_FUNCTION_in_funct_declaration_tail1084); 
			match(input,Identifier,FOLLOW_Identifier_in_funct_declaration_tail1086); 
			match(input,LPAREN,FOLLOW_LPAREN_in_funct_declaration_tail1088); 
			pushFollow(FOLLOW_param_list_in_funct_declaration_tail1090);
			param_list();
			state._fsp--;

			match(input,RPAREN,FOLLOW_RPAREN_in_funct_declaration_tail1092); 
			match(input,BEGIN,FOLLOW_BEGIN_in_funct_declaration_tail1094); 
			pushFollow(FOLLOW_block_list_in_funct_declaration_tail1096);
			block_list();
			state._fsp--;

			match(input,END,FOLLOW_END_in_funct_declaration_tail1098); 
			match(input,SEMI,FOLLOW_SEMI_in_funct_declaration_tail1100); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "funct_declaration_tail"



	// $ANTLR start "main_function"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:176:1: main_function : MAIN LPAREN RPAREN BEGIN block_list END SEMI ;
	public final void main_function() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:177:5: ( MAIN LPAREN RPAREN BEGIN block_list END SEMI )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:177:9: MAIN LPAREN RPAREN BEGIN block_list END SEMI
			{
			match(input,MAIN,FOLLOW_MAIN_in_main_function1119); 
			match(input,LPAREN,FOLLOW_LPAREN_in_main_function1121); 
			match(input,RPAREN,FOLLOW_RPAREN_in_main_function1123); 
			match(input,BEGIN,FOLLOW_BEGIN_in_main_function1125); 
			pushFollow(FOLLOW_block_list_in_main_function1127);
			block_list();
			state._fsp--;

			match(input,END,FOLLOW_END_in_main_function1129); 
			match(input,SEMI,FOLLOW_SEMI_in_main_function1131); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "main_function"



	// $ANTLR start "param_list"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:180:1: param_list : ( param param_list_tail )? ;
	public final void param_list() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:181:5: ( ( param param_list_tail )? )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:181:9: ( param param_list_tail )?
			{
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:181:9: ( param param_list_tail )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==Identifier) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:181:10: param param_list_tail
					{
					pushFollow(FOLLOW_param_in_param_list1151);
					param();
					state._fsp--;

					pushFollow(FOLLOW_param_list_tail_in_param_list1153);
					param_list_tail();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "param_list"



	// $ANTLR start "param_list_tail"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:184:1: param_list_tail : ( COMMA param param_list_tail )? ;
	public final void param_list_tail() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:185:5: ( ( COMMA param param_list_tail )? )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:185:9: ( COMMA param param_list_tail )?
			{
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:185:9: ( COMMA param param_list_tail )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==COMMA) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:185:10: COMMA param param_list_tail
					{
					match(input,COMMA,FOLLOW_COMMA_in_param_list_tail1175); 
					pushFollow(FOLLOW_param_in_param_list_tail1177);
					param();
					state._fsp--;

					pushFollow(FOLLOW_param_list_tail_in_param_list_tail1179);
					param_list_tail();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "param_list_tail"



	// $ANTLR start "param"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:188:1: param : Identifier COLON type_id ;
	public final void param() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:189:5: ( Identifier COLON type_id )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:189:9: Identifier COLON type_id
			{
			match(input,Identifier,FOLLOW_Identifier_in_param1200); 
			match(input,COLON,FOLLOW_COLON_in_param1202); 
			pushFollow(FOLLOW_type_id_in_param1204);
			type_id();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "param"



	// $ANTLR start "block_list"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:192:1: block_list : block block_tail ;
	public final void block_list() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:193:5: ( block block_tail )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:193:9: block block_tail
			{
			pushFollow(FOLLOW_block_in_block_list1223);
			block();
			state._fsp--;

			pushFollow(FOLLOW_block_tail_in_block_list1225);
			block_tail();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block_list"



	// $ANTLR start "block_tail"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:196:1: block_tail : ( block block_tail )? ;
	public final void block_tail() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:197:5: ( ( block block_tail )? )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:197:9: ( block block_tail )?
			{
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:197:9: ( block block_tail )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==BEGIN) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:197:10: block block_tail
					{
					pushFollow(FOLLOW_block_in_block_tail1245);
					block();
					state._fsp--;

					pushFollow(FOLLOW_block_tail_in_block_tail1247);
					block_tail();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block_tail"



	// $ANTLR start "block"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:202:1: block : BEGIN declaration_segment stat_seq END SEMI ;
	public final void block() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:203:5: ( BEGIN declaration_segment stat_seq END SEMI )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:203:9: BEGIN declaration_segment stat_seq END SEMI
			{
			match(input,BEGIN,FOLLOW_BEGIN_in_block1270); 
			pushFollow(FOLLOW_declaration_segment_in_block1272);
			declaration_segment();
			state._fsp--;

			pushFollow(FOLLOW_stat_seq_in_block1274);
			stat_seq();
			state._fsp--;

			match(input,END,FOLLOW_END_in_block1276); 
			match(input,SEMI,FOLLOW_SEMI_in_block1278); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block"



	// $ANTLR start "declaration_segment"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:206:1: declaration_segment : type_declaration_list var_declaration_list ;
	public final void declaration_segment() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:207:5: ( type_declaration_list var_declaration_list )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:207:9: type_declaration_list var_declaration_list
			{
			pushFollow(FOLLOW_type_declaration_list_in_declaration_segment1297);
			type_declaration_list();
			state._fsp--;

			pushFollow(FOLLOW_var_declaration_list_in_declaration_segment1299);
			var_declaration_list();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declaration_segment"



	// $ANTLR start "type_declaration_list"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:210:1: type_declaration_list : ( type_declaration type_declaration_list )? ;
	public final void type_declaration_list() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:211:5: ( ( type_declaration type_declaration_list )? )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:211:9: ( type_declaration type_declaration_list )?
			{
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:211:9: ( type_declaration type_declaration_list )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==TYPE) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:211:10: type_declaration type_declaration_list
					{
					pushFollow(FOLLOW_type_declaration_in_type_declaration_list1319);
					type_declaration();
					state._fsp--;

					pushFollow(FOLLOW_type_declaration_list_in_type_declaration_list1321);
					type_declaration_list();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type_declaration_list"



	// $ANTLR start "var_declaration_list"
	// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:214:1: var_declaration_list : ( var_declaration var_declaration_list )? ;
	public final void var_declaration_list() throws RecognitionException {
		try {
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:215:5: ( ( var_declaration var_declaration_list )? )
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:215:9: ( var_declaration var_declaration_list )?
			{
			// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:215:9: ( var_declaration var_declaration_list )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==VAR) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// E:\\CS4240_SPR15-master\\CS4240_SPR15-master\\Tiger.g:215:10: var_declaration var_declaration_list
					{
					pushFollow(FOLLOW_var_declaration_in_var_declaration_list1343);
					var_declaration();
					state._fsp--;

					pushFollow(FOLLOW_var_declaration_list_in_var_declaration_list1345);
					var_declaration_list();
					state._fsp--;

					}
					break;

			}

			}
